# Portfolio-Management-Lab

./: .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/: 01_data_and_returns.ipynb
src/pm/: data.py  returns.py  visualization.py
