[project]
name = "portfolio-management-lab"
version = "0.1.0"
description = "Personal portfolio management project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "yfinance",
  "matplotlib"
]

[project.urls]
Repository = "https://github.com/lalocahuantzi/Portfolio-Management-Lab"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]